--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
+    "vue-star-rating": "^1.7.0",
     "vue-unicons": "^3.3.1",
     "vuex": "^3.6.2"
   },
