--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build && cd dist && copy index.html 404.html",
     "lint": "vue-cli-service lint",
-    "deploy": "vue-cli-service build && cd dist && copy index.html 404.html && gh-pages -d dist"
+    "deploy": "vue-cli-service build && cd dist && copy index.html 404.html && cd .. && gh-pages -d dist"
   },
   "dependencies": {
     "axios": "^1.7.9",
